# petri-net-engine

./: .gitignore  Makefile  pyproject.toml
src/: __init__.py
src/petri_net_engine_fabianvera/: __init__.py
src/petri_net_engine_fabianvera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/petri_net_engine_fabianvera/application/: __init__.py  create_petri_net_engine.py  from_event_log_to_petri_net.py  from_json_to_petri_net.py  from_petri_net.py
src/petri_net_engine_fabianvera/domain/: __init__.py  petri_net.py  petri_net_engine.py  petri_net_factory.py  place.py  transition.py
tests/: build_petri_net_from.py  from_event_log.py  petri_net.py  petri_net_engine.py  petri_net_factory.py
tests/data/: petri_net_as_json.json
