[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petri_net_engine_fabianvera"
version = "0.0.3.12"
authors = [
    { name = "Fabian Vera", email = "fabianvera728@gmail.com" },
]
description = "A small petri net engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
